# mkdocs-authors-plugin

./: .authors.yml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  test.yml  tests.yml
authors/: index.html
authors_yaml_format/: index.html
configuration/: index.html
docs/: authors.md  authors_yaml_format.md  configuration.md  index.md
search/: search_index.json
src/mkdocs_authors_plugin/: plugin.py
tests/: test_plugin.py
